# mytools

./: .gitignore  LICENSE  README.md  Root.csv  all_push.bat  test.json
C#/ConsoleApp/: ConsoleApp.sln
C#/TcpServer/: Program.cs  TcpServer.sln
C++/: .gitignore  hoge.txt  hoge.txt_20230703_045930
C++/C++ForVSCode/: C++.code-workspace
C++/C++ForVSCode/src/TcpServerTest/: CMakeLists.txt  main.cpp
C++/CodeSample/: .gitignore  CodeSample.sln
C++/MFCTool/: MFCTool.sln
C++/PMS/: PMS.sln
C++/snippets/: printf.snippet  printf_line.snippet  t_macro.snippet
VBA/: CsvParser.cls  IniParser.cls  JsonParser.cls  ModuleManager.cls
VBA/BMPInformer/: BMPInformer.cls  SampleSheet.cls
doc/: 文字コード.txt
js/brower-tools/: svg-viewer.html
js/modules/: ini-tool.mjs  object-tools.mjs
js/script/: compare-ini.mjs  compare-json.mjs  main.mjs  main2.mjs
md/: how_to_git.md
node/home-hack/: app.mjs  app_g.mjs  file-stream-test.mjs  package-lock.json  package.json  readme.md
ps/: Add-Right-Click.ps1  Remove-Right-Click.ps1  Save-Image-Clip.ps1  Set-IniContent.ps1  Template.ps1  Utility.ps1  ps_starter.bat
raspberry_pi/: .vimrc  how_to.md
ts/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
ts/src/: index.ts
ts_lib_test/: index.html  package-lock.json  package.json  package.json.bak  resolveImportPath.js  tsconfig.json  vite.config.ts
vanillats-vite/: .gitignore  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
vue3/: package-lock.json  package.json  pnpm-lock.yaml
webjs/: .gitignore
(+200 files in other folders)
